cmake_minimum_required(VERSION 3.21)
project(leetcode)

set(CMAKE_CXX_STANDARD 11)


add_executable(89 89.cpp)
add_executable(15 15.cpp)
add_executable(offer_30 offer_30.cpp)
add_executable(offer_9 offer_9.cpp)
add_executable(1920 1920.cpp)
add_executable(offer_6 offer_6.cpp)
add_executable(offer_24 offer_24.cpp)
add_executable(offer_05 offer_05.cpp)
add_executable(offer_58 offer_58.cpp)
add_executable(offer_53 offer_53.cpp)
add_executable(704 704.cpp)
add_executable(278 278.cpp)
add_executable(35 35.cpp)
add_executable(977 977.cpp)
add_executable(189 189.cpp)
add_executable(541 541.cpp)